{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -2,6 +2,7 @@ collections:
   2-key-information:
     output: true
     order:
+      - Student Welfare 1.md
       - Forms 1.md
       - Administrative Information.md
       - Direct School Admission.md
