--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - Travel Declaration From.md
       - FAS Form.md
       - School Calendar.md
       - Facilities.md
