--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Student Welfare.md
-      - Forms 1.md
+      - Forms.md
       - Administrative Information.md
       - Direct School Admission.md
       - TimeTables & Examinations/.keep
