--- a/_links/collection.yml
+++ b/_links/collection.yml
@@ -2,6 +2,7 @@ collections:
   links:
     output: true
     order:
+      - Forms.md
       - Student Welfare.md
       - Useful Links/.keep
       - Useful Links/Staff.md
