{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,6 +39,6 @@ links:
       - title: Parents Gateway
         url: /links/parents-gateway/
       - title: Forms
-        url: /links/useful-links/staff/forms/
+        url: /links/forms/
       - title: Student Welfare
-        url: /links/useful-links/staff/student-welfare/
+        url: /links/student-welfare/
