--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - ClassTimeTable.md
       - Counselling Services.md
       - ECHA Nomination Form.md
       - Travel Declaration From.md
