{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - End of Year Examination.md
       - ClassTimeTable.md
       - Counselling Services.md
       - ECHA Nomination Form.md
