--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - Semester 1 Weighted Assessments.md
       - End of Year Examination.md
       - ClassTimeTable.md
       - Counselling Services.md
