--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - FGC Schedules.md
       - Semester 2 Weighted Assessments.md
       - Semester 1 Weighted Assessments.md
       - End of Year Examination.md
