--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - GCE O & N level Information.md
       - Preliminary Examination.md
       - Post–Exam Timetable.md
       - FGC Schedules.md
