--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ links:
       - title: Home-Based Learning
         url: /programmes/home-based-learning-hbl/
       - title: PDLP
-        url: /information/PDLP/personalised-digital-learning-programme-pdlp/
+        url: /information/pdlp/
       - title: Full-Subject Based Banding
         url: /programmes/full-subject-based-banding-full-sbb/
       - title: Direct School Admission
