--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -2,7 +2,7 @@ collections:
   1-about-jyss:
     output: true
     order:
-      - JYSS Yearbook 2024.md
+      - School Yearbook 2024.md
       - Principal's Message.md
       - School Overview/.keep
       - School Overview/School History.md
