--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -2,6 +2,7 @@ collections:
   1-about-jyss:
     output: true
     order:
+      - School Booklet 2024.md
       - Principal's Message.md
       - School Overview/.keep
       - School Overview/School History.md
