--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -11,7 +11,7 @@ collections:
       - School Overview/The School Crest, Motto and Song.md
       - School Overview/H E A R T S Ethos.md
       - Student Handbook.md
-      - School Yearbook 2024.md
+      - School Yearbook.md
       - Why Choose Juying Secondary?/.keep
       - Why Choose Juying Secondary?/Why Choose Juying Secondary?.md
       - Why Choose Juying Secondary?/What Do Our Parents Say About Us?.md
