--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -9,7 +9,7 @@ collections:
       - School Routines & Procedures.md
       - Home Based Learning (HBL).md
       - Full Subject–Based Banding (Full SBB).md
-      - Bookshop & Booklists.md
+      - Book & Uniform.md
       - Secondary 1 Registration/.keep
       - Secondary 1 Registration/Secondary 1 Registration.md
       - Secondary 1 Registration/Appeal.md
