{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - PDLP.md
       - Student Welfare.md
-      - FAS Form.md
+      - Financial Assistance Scheme Form.md
       - Direct School Admission.md
       - School Routines & Procedures.md
       - Home Based Learning (HBL).md
