--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,12 +9,10 @@ links:
         url: /information/administrative-information/secondary-1-registration/
       - title: School Routines and Procedure
         url: /information/administrative-information/school-routines-n-procedures/
-      - title: Bookshop and Booklist
+      - title: Books & Uniform
         url: /information/administrative-information/bookshop-booklists/
       - title: Home-Based Learning
         url: /programmes/home-based-learning-hbl/
-      - title: Full-Subject Based Banding
-        url: /programmes/full-subject-based-banding-full-sbb/
       - title: Direct School Admission
         url: /information/administrative-information/direct-school-admission/
   - title: Our People
