--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Secondary 1 Registration/Full Subject–Based Banding (Full SBB).md
       - Secondary 1 Registration/Appeal.md
       - Secondary 1 Registration/Other Enquiries.md
-      - Books & Uniform.md
+      - Booklists 2025.md
       - Financial Assistance Scheme Form.md
       - School Routines & Procedures.md
       - Home Based Learning (HBL).md
