{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ links:
         url: /information/administrative-information/secondary-1-registration/
       - title: School Routines and Procedure
         url: /information/administrative-information/school-routines-n-procedures/
-      - title: Books & Uniform
+      - title: Booklists 2025
         url: /information/administrative-information/bookshop-booklists/
       - title: Home-Based Learning
         url: /programmes/home-based-learning-hbl/
