{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,8 @@ links:
         url: /information/administrative-information/secondary-1-registration/
       - title: Booklists 2025
         url: /information/administrative-information/bookshop-booklists/
+      - title: PDLP
+        url: /information/administrative-information/PDLP/
   - title: Our People
     collection: 3-our-people
   - title: Our Programmes
