--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - Insurance For Students.md
       - Administrative Information.md
       - GCE O & N level Information.md
       - Preliminary Examination.md
