--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -2,7 +2,7 @@ collections:
   1-about-jyss:
     output: true
     order:
-      - Principal's Message.md
+      - Principal's Message 2025.md
       - School Overview/.keep
       - School Overview/School History.md
       - School Overview/Vision & Mission.md
