--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -2,7 +2,7 @@ collections:
   2-key-information:
     output: true
     order:
-      - GROUP PERSONAL ACCIDENT INSURANCE FOR STUDENTS.md
+      - Group Personal Accident Insurance For Students.md
       - Secondary 1 Registration/.keep
       - Secondary 1 Registration/Secondary 1 Registration.md
       - Secondary 1 Registration/Books & Uniform.md
