--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,8 @@ links:
         url: /information/administrative-information/bookshop-booklists/
       - title: Student PDLP
         url: /pdlp/
+      - title: GPA Insurance For Student
+        url: /group-personal-accident-insurance-for-students/
   - title: Our People
     collection: 3-our-people
   - title: Our Programmes
