--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ links:
         url: /information/administrative-information/bookshop-booklists/
       - title: Student PDLP
         url: /pdlp/
-      - title: GPA Insurance For Student
+      - title: School Security And Safety
         url: /group-personal-accident-insurance-for-students/
   - title: Our People
     collection: 3-our-people
