{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -2,6 +2,7 @@ collections:
   1-about-jyss:
     output: true
     order:
+      - Canteen Advertisement.md
       - Principal's Message 2025.md
       - School Overview/.keep
       - School Overview/School History.md
