--- a/_unused-pages/collection.yml
+++ b/_unused-pages/collection.yml
@@ -2,6 +2,7 @@ collections:
   unused-pages:
     output: true
     order:
+      - Canteen Advertisement.md
       - Sexuality Education.md
       - Administrative Information.md
       - Insurance For Students.md
