--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ links:
         url: /pdlp/
       - title: GPA Insurance For Student
         url: /group-personal-accident-insurance-for-students/
+      - title: Canteen Advertisement
+        url: /canteen-advertisement/
   - title: Our People
     collection: 3-our-people
   - title: Our Programmes
