{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_4-our-programmes/collection.yml
+++ b/_4-our-programmes/collection.yml
@@ -7,7 +7,7 @@ collections:
       - CCA/Student Council.md
       - CCA/Speech & Drama Society.md
       - CCA/Infocomm Technology Club.md
-      - CCA/Art & Craft Club.md
+      - CCA/Art & Crafts Club.md
       - CCA/Softball.md
       - CCA/Netball.md
       - CCA/Basketball.md
