{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_4-our-programmes/collection.yml
+++ b/_4-our-programmes/collection.yml
@@ -6,7 +6,7 @@ collections:
       - CCA/Grading System.md
       - CCA/Student Council.md
       - CCA/Speech & Drama Society.md
-      - CCA/Infocomm Technology Club.md
+      - CCA/Audio Visual and Infocomm Technology.md
       - CCA/Art & Crafts Club.md
       - CCA/Softball.md
       - CCA/Netball.md
