{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_3-our-people/collection.yml
+++ b/_3-our-people/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - School Management Committee.md
       - Departments/.keep
-      - Departments/English Language & Literature.md
+      - Departments/English Language & Literature Department.md
       - Departments/Mother Tongue.md
       - Departments/Mathematics.md
       - Departments/Science.md
