{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -15,5 +15,5 @@ collections:
       - Group Personal Accident Insurance For Students.md
       - Home Based Learning (HBL).md
       - Direct School Admission.md
-      - Student Welfare.md
+      - Counselling Services.md
       - Canteen Advertisement.md
