{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ links:
     sublinks:
       - title: School Routines and Procedure
         url: /information/administrative-information/school-routines-n-procedures/
+      - title: Counselling Services
+        url: /counselling services/
       - title: Sec 1 Registration
         url: /information/administrative-information/secondary-1-registration/
       - title: Booklists 2025
