--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ links:
       - title: School Routines and Procedure
         url: /information/administrative-information/school-routines-n-procedures/
       - title: Counselling Services
-        url: /counselling-services/
+        url: /counselling-services-1/
       - title: Sec 1 Registration
         url: /information/administrative-information/secondary-1-registration/
       - title: Booklists 2025
