{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,16 +5,18 @@ links:
   - title: Key Information
     url: /information/administrative-information
     sublinks:
+      - title: School Calendar
+        url: /happenings/school-calendar/
       - title: School Routines and Procedure
         url: /information/administrative-information/school-routines-n-procedures/
-      - title: Counselling Services
-        url: /counselling-services-1/
+      - title: Student PDLP
+        url: /pdlp/
       - title: Sec 1 Registration
         url: /information/administrative-information/secondary-1-registration/
       - title: Booklists 2025
         url: /information/administrative-information/bookshop-booklists/
-      - title: Student PDLP
-        url: /pdlp/
+      - title: Counselling Services
+        url: /counselling-services-1/
       - title: GPA Insurance For Student
         url: /group-personal-accident-insurance-for-students/
       - title: Canteen Advertisement
