--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -2,6 +2,7 @@ collections:
   2-key-information:
     output: true
     order:
+      - Sec 2 Subject Allocation Exercise Briefing.md
       - School Routines & Procedures.md
       - Student PDLP.md
       - Secondary 1 Registration/.keep
