{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,6 +19,8 @@ links:
         url: /group-personal-accident-insurance-for-students/
       - title: Canteen Advertisement
         url: /canteen-advertisement/
+      - title: Sec 2 Subject Allocation
+        url: /sec-2-subject-allocation-exercise-briefing/
   - title: Our People
     collection: 3-our-people
   - title: Our Programmes
