{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_2-key-information/collection.yml
+++ b/_2-key-information/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Resource For Parents.md
       - School Routines & Procedures.md
-      - Student PDLP.md
+      - PLD Initiative.md
       - Home Based Learning (HBL).md
       - ClassTimeTable.md
       - Sec 2 Subject Allocation Exercise Briefing.md
