{"message":"Update file: collection.yml","userId":"4173","fileName":"collection.yml"}

--- a/_1-about-jyss/collection.yml
+++ b/_1-about-jyss/collection.yml
@@ -17,6 +17,7 @@ collections:
       - Why Choose Juying Secondary?/What Do Our Parents Say About Us?.md
       - Why Choose Juying Secondary?/What Do Our Students Say About Us?.md
       - Why Choose Juying Secondary?/Juying Publicity Booklets.md
+      - Achievements/Staff Achievements.md
       - Achievements/.keep
       - Achievements/School.md
       - Achievements/Purposeful Partnership.md
