{"message":"Update file: navigation.yml","userId":"4173","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ links:
         url: /key-information/bookshop-booklists/
       - title: School Routines and Procedure
         url: /key-information/school-routines-n-procedures/
-      - title: Student PDLP
+      - title: PLD Initiative
         url: /pdlp/
       - title: Sec 2 Subject Allocation
         url: /sec-2-subject-allocation-exercise-briefing/
